--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2 # This action checks-out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
       - name: Hello world action step
-        uses: ./ # Uses an action in the root directory
+        uses: ./ 
         id: hello
         with:
           who-to-greet: 'James Whitehead' # change it to your name
